--- a/2020_21/PRB/H2/week5/homework.tex
+++ b/2020_21/PRB/H2/week5/homework.tex
@@ -158,7 +158,7 @@ and insert this result to find
   \P(|X-6| \geq 6) \leq \frac{5}{6}.
 \end{align*}
 \section*{P 5.4}
-We have a random variable $X_n\sim\Binom(1/2,n)$. We define
+We have a random variable $X_n\sim\Binom(n,1/2)$. We define
 $A_n = X_n / n$ to be the average of all the $n$ coin flips. 
 We know
 \begin{align*}
