Small tweaks to old notes

--- a/2019_20/CAP/notes/notes.tex
+++ b/2019_20/CAP/notes/notes.tex
@@ -4,7 +4,7 @@
 \usepackage{babel}
 \usepackage{amsmath}
 \usepackage{amssymb}
-\usepackage{newpxtext}
+\usepackage{amsthm}
 \usepackage{hyperref}
 \hypersetup{
 	colorlinks,
@@ -13,6 +13,19 @@
 	linkcolor=black,
 	urlcolor=black
 }
+\usepackage{fontspec}
+\setmainfont{arial}
+\usepackage{nicefrac}
+\usepackage{siunitx}
+\usepackage{mathtools}
+\newtheoremstyle{sltheorem} {}                % Space above
+{}                % Space below
+{\upshape}        % Theorem body font % (default is "\upshape")
+{}                % Indent amount
+{\bfseries}       % Theorem head font % (default is \mdseries)
+{.}               % Punctuation after theorem head % default: no punctuation
+{ }               % Space after theorem head
+{}                % Theorem head spec
 \DeclareMathOperator{\csch}{csch}
 \DeclareMathOperator{\arccot}{\text{cot}^{-1}}
 \DeclareMathOperator{\arccsc}{\text{csc}^{-1}}
@@ -47,6 +60,7 @@
 \date{May 28, 2020}
 \maketitle
 \tableofcontents
+\pagebreak
 \section{Functions and models}
 \subsection{Four ways to represent a function}
 \begin{definition}
